<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="mitchell.lang.e_quipmentshop.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_rules"
        android:name="mitchell.lang.e_quipmentshop.ui.dashboard.DashboardFragment"
        android:label="@string/title_rules"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_equipment"
        android:name="mitchell.lang.e_quipmentshop.ui.notifications.NotificationsFragment"
        android:label="@string/title_equipment"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_stickpick"
        android:name="mitchell.lang.e_quipmentshop.ui.notifications.NotificationsFragment"
        android:label="@string/title_stickpick"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="mitchell.lang.e_quipmentshop.ui.notifications.NotificationsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />
</navigation>